--- a/instructions.tex
+++ b/instructions.tex
@@ -792,56 +792,56 @@
 
 % TODO ADD THE FIGURE FOR THE STREAM BUFFER SETTING HERE !!!!
 
-% ------------------------------------------------------------------------------
-\section{Using micro-ROS in a Kria demonstration project}
-%\label{sec:kriademomicroros}
-Beyond the inclusion of the library itself, actually using the micro-ROS system
-within an external project require more than just importing the needed
-functions.
+% % ------------------------------------------------------------------------------
+% \section{Using micro-ROS in a Kria demonstration project}
+% %\label{sec:kriademomicroros}
+% Beyond the inclusion of the library itself, actually using the micro-ROS system
+% within an external project require more than just importing the needed
+% functions.
 
-Indeed, if you would be just adding the various function for sending messages to
-the general ROS2 network, you would face issues with three key aspects, namely:
-\begin{itemize}
-\item Time-related functions, in particular \verb|clock_gettime|.
-\item Memory allocation functions.
-\item Communication function.
-\end{itemize}
+% Indeed, if you would be just adding the various function for sending messages to
+% the general ROS2 network, you would face issues with three key aspects, namely:
+% \begin{itemize}
+% \item Time-related functions, in particular \verb|clock_gettime|.
+% \item Memory allocation functions.
+% \item Communication function.
+% \end{itemize}
 
-All three points requires some custom functions in order for the library to
-know what to do with these types of function it is trying to use.
-In our case, I will present the implementation of these functions for the
-Kria board.
+% All three points requires some custom functions in order for the library to
+% know what to do with these types of function it is trying to use.
+% In our case, I will present the implementation of these functions for the
+% Kria board.
 
-\subsection{Custom time-related functions}
-%\label{sec:timefuncs}
-The end result for these implementation are visible in the appendix
-\ref{sec:timefunctions}.
+% \subsection{Custom time-related functions}
+% %\label{sec:timefuncs}
+% The end result for these implementation are visible in the appendix
+% \ref{sec:timefunctions}.
 
-As micro-ROS can be used on a variety of board, it does not understand by itself
-what time functions are meant to be used, so some API-style function are being
-used in the library and it is then needed for the person using a new board
-to implement these function inner working using the board own time-related
-function calls.
+% As micro-ROS can be used on a variety of board, it does not understand by itself
+% what time functions are meant to be used, so some API-style function are being
+% used in the library and it is then needed for the person using a new board
+% to implement these function inner working using the board own time-related
+% function calls.
 
-In particular for this part, the \verb|clock_gettime| function is key, and could
-simply be implemented with some FreeRTOS time functions.
-Again, please refer to the appendix \ref{sec:timefunctions} for details.
+% In particular for this part, the \verb|clock_gettime| function is key, and could
+% simply be implemented with some FreeRTOS time functions.
+% Again, please refer to the appendix \ref{sec:timefunctions} for details.
 
-\subsection{WIP:: Custom memory allocator functions}
-% \label{sec:memallocators}
-Similarly, it is required to re-implement some form of memory allocating
-functions in order for the library to be able to work with such functionalities
-in a formalized way.
+% \subsection{WIP:: Custom memory allocator functions}
+% % \label{sec:memallocators}
+% Similarly, it is required to re-implement some form of memory allocating
+% functions in order for the library to be able to work with such functionalities
+% in a formalized way.
 
-As for now, the current version of the allocator function can be seen in the
-appendix \ref{sec:allocfunctions}, but the current setup is not working
-properly yet and some further test and modification will be needed.
+% As for now, the current version of the allocator function can be seen in the
+% appendix \ref{sec:allocfunctions}, but the current setup is not working
+% properly yet and some further test and modification will be needed.
 
-\subsection{WIP:: Custom transport layer functions}
-%\label{sec:transportlayer}
-This part is the key translation layer that needs to happen in order for the
-DDS system from the micro-ROS library to be using the communication channel we
-want it to.
+% \subsection{WIP:: Custom transport layer functions}
+% %\label{sec:transportlayer}
+% This part is the key translation layer that needs to happen in order for the
+% DDS system from the micro-ROS library to be using the communication channel we
+% want it to.
 
 
 
